@@ -19,7 +19,6 @@ Select distribution pkgs:  ftp://ftp.zimmers.net/pub/projects/coffeemud
 Sourceforge site:          http://sourceforge.net/projects/coffeemud
 SVN repository:            svn://coffeemud.net/public/CoffeeMud
 GIT repository @github:    https://github.com/bozimmerman/CoffeeMud
-GIT repository @bitbucket: https://bitbucket.org/bozimmerman/coffeemud
 
 Files in this directory:
 
