@@ -2080,6 +2080,17 @@ Example  : chant "unicorns health"\n\r\
 This chant causes the druid to become as healthy as a unicorn by boosting their \
 constitution more and more as the druid gains levels.
 
+CHANT_UPLIFT=<ABILITY>\
+Usage    : CHANT "UPLIFT" [TARGET]\n\r\
+Example  : chant "uplift" dog\n\r\
+This powerful chant causes the target animal follower to begin to morph into \
+a new race.  To begin the chant, the druid must be with a druidic monument. \
+The chant will cause the druid to fall into a deep sleep until his or her \
+mana is fully restored.  Once the morphing process completes, the animal will \
+become a humanoid-ish version of its prior race, gaining hands and feet, and \
+some measure of intelligence.  If the morphing process stops prematurely, \
+it may fail, or result in a Neo hybrid race.
+
 CHANT_VAMPIREVINE=CHANT_VAMPIRE_VINE
 CHANT_VAMPIRE_VINE=<ABILITY>\
 Usage    : CHANT "VAMPIRE VINE"\n\r\
